<resources>
    <string name="default_lang" translatable="false">System default</string>
    <string name="en_lang" translatable="false">English</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="af_lang" translatable="false">Afrikaans</string>
...
    <string name="openapsma_run">Run now</string>
    <string name="vitualpump_label">VIRTUAL PUMP</string>
    <string name="virtualpump_resultok">OK</string>
    <string name="openapsma_lastrun_label">Last run</string>
    <string name="openapsma_inputparameters_label">Input parameters</string>
...
    <string name="simpleprofile">Simple profile</string>
    <string name="treatments">Treatments</string>
    <string name="virtualpump">Virtual Pump</string>
    <string name="careportal">Careportal</string>

...
    <string name="apsmode_title">APS Mode</string>

    <string name="closedloop">Closed Loop</string>
    <string name="openloop">Open Loop</string>
    <string name="lowglucosesuspend">Low Glucose Suspend</string>
...
    <string name="disabledloop">Loop Disabled</string>
    <string name="disableloop">Disable loop</string>
    <string name="enableloop">Enable loop</string>

    <string name="openloop_newsuggestion">New suggestion available</string>
...
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="end_user_license_agreement_text">MUST NOT BE USED TO MAKE MEDICAL DECISIONS. THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES 
    <string name="end_user_license_agreement_i_understand">I UNDERSTAND AND AGREE</string>
    <string name="save">Save</string>
    <string name="reloadprofile">Reload profile</string>
    <string name="smscommunicator">SMS Communicator</string>
...
    <string name="old_data">OLD DATA</string>
    <string name="sms_minago">%1$dmin ago</string>
    <string name="localprofile">Local Profile</string>
    <string name="short_avgdelta">Short avg. delta</string>
    <string name="long_avgdelta">Long avg. delta</string>
...
    <string name="child">Child</string>
    <string name="teenage">Teenage</string>
    <string name="adult">Adult</string>
    <string name="resistantadult">Insulin resistant adult</string>
    <string name="key_age" translatable="false">age</string>
...
    <string name="careportal_canulaage_label">Canula age</string>
    <string name="careportal_insulinage_label">Insulin age</string>
    <string name="doprofileswitch">Do Profile Switch</string>
    <string name="careportal_pbage_label">Pump battery age</string>
    <string name="careportal_sensor_label">Sensor</string>
...
    <string name="careportal_pump_label">PUMP</string>
    <string name="careportal_newnstreatment_duration_min_label">Duration [min]</string>
    <string name="openapssmb">OpenAPS 0.7.0</string>
    <string name="smb_shortname">APS</string>
    <string name="key_use_smb" translatable="false">use_smb</string>
...
    <string name="free_peak_oref">Free-Peak Oref</string>
    <string name="rapid_acting_oref">Rapid-Acting Oref</string>
    <string name="ultrarapid_oref">Ultra-Rapid Oref</string>
    <string name="lyumjev">Lyumjev</string>
    <string name="dia_too_short">DIA of %1$f too short - using %2$f instead!</string>
...
    <string name="overview_show_notes_field_in_dialogs_title">Show notes field in treatment dialogs</string>
    <string name="title_activity_setup_wizard" translatable="false">SetupWizardActivity</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="nav_setupwizard">Setup Wizard</string>
...
    <string name="permission">Permission</string>
    <string name="password">Password</string>
    <string name="askforpermission">Ask for permission</string>
    <string name="needsystemwindowpermission">Application needs system window permission for notifications</string>
    <string name="unlockapp">Please enter the password for the AnyDanaLoop</string>
...
    <string name="doyouwantresetstats">Do you want to reset activity stats?</string>
    <string name="statistics">Statistics</string>
    <string name="randombg">Random BG</string>
    <string name="description_source_randombg">Generate random BG data (Demo mode only)</string>
    <string name="randombg_short">BG</string>
...
