...
            android:background="@android:color/transparent"
            android:onClick="showNextPage"
            android:text="@string/next_button"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="finishSetupWizard"
            android:text="@string/setupwizard_finish"
            android:textColor="#FFFFFF" />
...
