...
    <string name="key_stages_request_code" translatable="false">stages_request_code</string>
    <string name="key_StagesbgIsAvailableInNS" translatable="false">StagesbgIsAvailableInNS</string>
    <string name="key_StagespumpStatusIsAvailableInNS" translatable="false">StagespumpStatusIsAvailableInNS</string>
    <string name="key_StagesmanualEnacts" translatable="false">StagesmanualEnacts</string>

    <string name="stages_button_back">Back</string>
    <string name="stages_button_start">Start</string>
    <string name="stages_button_verify">Verify</string>
    <string name="nth_stage">Stage %1$d</string>
    <string name="stagenotstarted">Stage %1$d not started</string>
    <string name="stagenotfinished">Stage %1$d not finished</string>
    <string name="stages_0_stage">Setting up visualization and monitoring, and analyzing basals and ratios</string>
    <string name="stages_0_gate">Verify that BG is available in Nightscout, and pump insulin data is being uploaded</string>
...
